@@ -28,6 +28,13 @@ public enum PathPlacement {
         public boolean test(Path path) {
             return moduleDescriptor(path) != null;
         }
+
+        @Override
+        public boolean place(Path file, List<String> modulePath, List<String> classPath) {
+            ModuleDescriptor descriptor = moduleDescriptor(file);
+            (descriptor != null ? modulePath : classPath).add(file.toString());
+            return descriptor != null && descriptor.isAutomatic();
+        }
     };
 
     private final boolean modular;
@@ -41,6 +48,22 @@ public enum PathPlacement {
     }
 
     public abstract boolean test(Path path) throws IOException;
+
+    public boolean place(Path file, List<String> modulePath, List<String> classPath) throws IOException {
+        (test(file) ? modulePath : classPath).add(file.toString());
+        return false;
+    }
+
+    /**
+     * Whether the jar (or exploded directory) is an automatic module - one with an
+     * {@code Automatic-Module-Name} but no module descriptor. A module path that carries one needs
+     * {@code --add-modules ALL-MODULE-PATH} at launch, since an automatic module declares no
+     * {@code requires} and so never pulls its own named dependencies into the run-time module graph.
+     */
+    public static boolean automatic(Path file) {
+        ModuleDescriptor descriptor = moduleDescriptor(file);
+        return descriptor != null && descriptor.isAutomatic();
+    }
 
     public PathPlacement forModuleInfo(boolean moduleInfoPresent) {
         return moduleInfoPresent ? this : CLASS_PATH;
