@@ -11,15 +11,29 @@ public class NativeImage extends JdkProcessBuildStep {
 
     public static final String NATIVE = "native/";
 
-    private final PathPlacement modulePath;
+    public static final String METADATA = "nativeimage/";
 
-    public NativeImage(PathPlacement modulePath) {
-        this(modulePath, ProcessHandler.OfProcess.ofCommand("native-image"));
+    private final PathPlacement pathPlacement;
+    private final String group;
+
+    public NativeImage(PathPlacement pathPlacement) {
+        this(pathPlacement, ProcessHandler.OfProcess.ofCommand("native-image"));
     }
 
-    public NativeImage(PathPlacement modulePath, Function<List<String>, ? extends ProcessHandler> factory) {
+    public NativeImage(PathPlacement pathPlacement, Function<List<String>, ? extends ProcessHandler> factory) {
+        this(pathPlacement, factory, "main");
+    }
+
+    private NativeImage(PathPlacement pathPlacement,
+                        Function<List<String>, ? extends ProcessHandler> factory,
+                        String group) {
         super("native-image", factory);
-        this.modulePath = modulePath;
+        this.pathPlacement = pathPlacement;
+        this.group = group;
+    }
+
+    public NativeImage group(String group) {
+        return new NativeImage(pathPlacement, factory, group);
     }
 
     @Override
@@ -28,9 +42,10 @@ public class NativeImage extends JdkProcessBuildStep {
                                                     SequencedMap<String, BuildStepArgument> arguments,
                                                     SequencedMap<String, SequencedMap<String, String>> properties)
             throws IOException {
-        boolean modular = modulePath.modular();
+        boolean modular = pathPlacement.modular();
+        boolean selfContainedModuleGraph = true;
         String launcher = null, name = null;
-        List<String> path = new ArrayList<>();
+        List<String> modulePath = new ArrayList<>(), classPath = new ArrayList<>();
         Path config = null;
         for (BuildStepArgument argument : arguments.values()) {
             Path descriptor = argument.folder().resolve("launcher.properties");
@@ -51,34 +66,33 @@ public class NativeImage extends JdkProcessBuildStep {
                 }
             }
             Path artifacts = argument.folder().resolve(BuildStep.ARTIFACTS);
-            if (Files.exists(artifacts)) {
-                Files.walkFileTree(artifacts, new SimpleFileVisitor<>() {
-                    @Override
-                    public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
-                        if (file.toString().endsWith(".jar")) {
-                            path.add(file.toString());
-                        }
-                        return FileVisitResult.CONTINUE;
+            if (Files.isDirectory(artifacts)) {
+                try (DirectoryStream<Path> files = Files.newDirectoryStream(artifacts)) {
+                    for (Path file : files) {
+                        selfContainedModuleGraph &= !pathPlacement.place(file, modulePath, classPath);
                     }
-                });
+                }
             }
-            for (Path file : Dependencies.select(argument.folder(), "runtime")) {
-                path.add(file.toString());
+            for (Path file : Dependencies.select(argument.folder(), group, "runtime")) {
+                selfContainedModuleGraph &= !pathPlacement.place(file, modulePath, classPath);
             }
             Path candidate = argument.folder().resolve("native-image");
             if (Files.isDirectory(candidate)) {
                 config = candidate;
             }
         }
-        if (launcher == null || path.isEmpty()) {
+        if (launcher == null || (modulePath.isEmpty() && classPath.isEmpty())) {
             return CompletableFuture.completedStage(null);
         }
-        for (String entry : path) {
-            if (entry.indexOf(File.pathSeparatorChar) != -1) {
-                throw new IllegalArgumentException(
-                        "Path entry contains separator '" + File.pathSeparator + "': " + entry);
+        for (List<String> entries : List.of(modulePath, classPath)) {
+            for (String entry : entries) {
+                if (entry.indexOf(File.pathSeparatorChar) != -1) {
+                    throw new IllegalArgumentException(
+                            "Path entry contains separator '" + File.pathSeparator + "': " + entry);
+                }
             }
         }
+        selfContainedModuleGraph &= classPath.isEmpty();
         List<String> commands = new ArrayList<>();
         commands.add("--no-fallback");
         if (config != null) {
@@ -88,14 +102,22 @@ public class NativeImage extends JdkProcessBuildStep {
         commands.add(Files.createDirectories(context.next().resolve(NATIVE))
                 .resolve(name == null ? "image" : name)
                 .toString());
-        if (modular) {
+        if (!modulePath.isEmpty()) {
             commands.add("--module-path");
-            commands.add(String.join(File.pathSeparator, path));
+            commands.add(String.join(File.pathSeparator, modulePath));
+        }
+        if (!classPath.isEmpty()) {
+            commands.add("-cp");
+            commands.add(String.join(File.pathSeparator, classPath));
+        }
+        if (!modulePath.isEmpty() && !selfContainedModuleGraph) {
+            commands.add("--add-modules");
+            commands.add("ALL-MODULE-PATH");
+        }
+        if (modular) {
             commands.add("--module");
             commands.add(launcher);
         } else {
-            commands.add("-cp");
-            commands.add(String.join(File.pathSeparator, path));
             commands.add(launcher);
         }
         return CompletableFuture.completedStage(commands);
